--- a/HTML/diversos.html
+++ b/HTML/diversos.html
@@ -22,8 +22,8 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav ms-auto">
                         <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
-                        <li class="nav-item"><a class="nav-link" href="sobre.html">Sobre</a></li>
-                        <li class="nav-item"><a class="nav-link active" href="diversos.html">Eventos</a></li>
+                        <li class="nav-item"><a class="nav-link" href="sobre.html">Sobre Nós</a></li>
+                        <li class="nav-item"><a class="nav-link active" href="diversos.html">Eventos e Visitações</a></li>
                         <li class="nav-item"><a class="nav-link" href="contato.html">Contato</a></li>
                     </ul>
                 </div>
