Update 4 com imagens

--- a/HTML/sobre.html
+++ b/HTML/sobre.html
@@ -171,7 +171,7 @@
         <section class="row mt-5">
           <div class="col-md-4 mb-4">
             <div class="card h-100">
-              <img src="img/vinhos1.jpeg" class="card-img-top" alt="Vinhos" />
+              <img src="img/vinhos.jpeg" class="card-img-top" alt="Vinhos" />
               <div class="card-body">
                 <h5 class="card-title">Vinhos Finos</h5>
                 <p class="card-text">
