Update 5 com imagens

--- a/HTML/contato.html
+++ b/HTML/contato.html
@@ -68,7 +68,7 @@
                     </div>
                     <div class="mb-3 form-check">
                         <input type="checkbox" class="form-check-input" id="newsletter">
-                        <label class="form-check-label" for="newsletter">Desejo receber newsletter</label>
+                        <label class="form-check-label" for="newsletter">Desejo receber notificações</label>
                     </div>
                     <button type="submit" class="btn btn-wine btn-lg">Enviar Mensagem</button>
                 </form>
