--- a/HTML/index.html
+++ b/HTML/index.html
@@ -162,11 +162,10 @@
                     <i class="fas fa-info-circle me-2 text-wine"></i>Sobre Nós
                   </a>
                   <a
-                    href="sobre.html"
+                    href="contato.html"
                     class="list-group-item list-group-item-action"
                   >
-                    <i class="fas fa-wine-bottle me-2 text-wine"></i>Nossos
-                    Produtos
+                    <i class="fas fa-wine-bottle me-2 text-wine"></i>Contato
                   </a>
                   <a
                     href="diversos.html"
