--- a/HTML/sobre.html
+++ b/HTML/sobre.html
@@ -171,7 +171,7 @@
         <section class="row mt-5">
           <div class="col-md-4 mb-4">
             <div class="card h-100">
-              <img src="img/vinhos.jpeg" class="card-img-top" alt="Vinhos" />
+              <img src="../img/vinhos.jpeg" class="card-img-top" alt="Vinhos" />
               <div class="card-body">
                 <h5 class="card-title">Vinhos Finos</h5>
                 <p class="card-text">
@@ -183,7 +183,7 @@
           </div>
           <div class="col-md-4 mb-4">
             <div class="card h-100">
-              <img src="img/geleias.jpeg" class="card-img-top" alt="Geleias" />
+              <img src="../img/geleias.jpeg" class="card-img-top" alt="Geleias" />
               <div class="card-body">
                 <h5 class="card-title">Geleias Artesanais</h5>
                 <p class="card-text">
@@ -195,7 +195,7 @@
           </div>
           <div class="col-md-4 mb-4">
             <div class="card h-100">
-              <img src="img/licores.jpeg" class="card-img-top" alt="Licores" />
+              <img src="../img/licores.jpeg" class="card-img-top" alt="Licores" />
               <div class="card-body">
                 <h5 class="card-title">Licores Exclusivos</h5>
                 <p class="card-text">
