--- a/HTML/diversos.html
+++ b/HTML/diversos.html
@@ -47,7 +47,7 @@
                     <div class="row mb-5">
                         <div class="col-md-6 mb-4">
                             <div class="card h-100">
-                                <img src="img/evento1.jpg" class="card-img-top" alt="Evento Corporativo">
+                                <img src="../img/evento2.jpeg" class="card-img-top" alt="Evento Corporativo">
                                 <div class="card-body">
                                     <h5 class="card-title">Eventos Corporativos</h5>
                                     <p class="card-text">Reuniões, confraternizações e treinamentos em ambiente diferenciado.</p>
@@ -57,7 +57,7 @@
                         </div>
                         <div class="col-md-6 mb-4">
                             <div class="card h-100">
-                                <img src="img/evento2.jpg" class="card-img-top" alt="Casamento">
+                                <img src="../img/casorio.jpeg" class="card-img-top" alt="Casamento">
                                 <div class="card-body">
                                     <h5 class="card-title">Casamentos</h5>
                                     <p class="card-text">Celebre seu amor em um cenário romântico e exclusivo.</p>
@@ -103,7 +103,7 @@
                                         <li>Degustação inclusa</li>
                                         <li>Desconto para grupos</li>
                                     </ul>
-                                    <button class="btn btn-wine">Ver Calendário</button>
+                                    <button type="date" class="btn btn-wine">Ver Calendário</button>
                                 </div>
                             </div>
                         </div>
@@ -193,7 +193,7 @@
             <div class="row">
                 <div class="col-md-6">
                     <h5>TRABALHE CONOSCO</h5>
-                    <p>Envie seu CV para: rh@parreiral.com</p>
+                    <p>Envie seu Currículo para: rh@parreiral.com</p>
                 </div>
                 <div class="col-md-6">
                     <h5>CONTATO</h5>
