--- a/HTML/sobre.html
+++ b/HTML/sobre.html
@@ -214,7 +214,7 @@
         <div class="row">
           <div class="col-md-6">
             <h5>TRABALHE CONOSCO</h5>
-            <p>Envie seu CV para: rh@parreiral.com</p>
+            <p>Envie seu Currículo para: rh@parreiral.com</p>
           </div>
           <div class="col-md-6">
             <h5>CONTATO</h5>
