--- a/HTML/index.html
+++ b/HTML/index.html
@@ -219,7 +219,7 @@
         <div class="row">
           <div class="col-md-6">
             <h5><i class="fas fa-briefcase me-2"></i>TRABALHE CONOSCO</h5>
-            <p>Envie seu CV para: rh@parreiral.com.br</p>
+            <p>Envie seu Currículo para: rh@parreiral.com.br</p>
           </div>
           <div class="col-md-6">
             <h5><i class="fas fa-envelope me-2"></i>CONTATO</h5>
