Update 7 Comentários apenas

--- a/HTML/diversos.html
+++ b/HTML/diversos.html
@@ -43,7 +43,7 @@
                         <p>Oferecemos uma estrutura completa para realização de eventos corporativos, casamentos, aniversários e degustações técnicas. Nossa equipe especializada cuida de todos os detalhes para garantir uma experiência única.</p>
                     </div>
 
-                    <!-- Cards de Eventos -->
+                    <!-- TCG de Evento -->
                     <div class="row mb-5">
                         <div class="col-md-6 mb-4">
                             <div class="card h-100">
@@ -67,7 +67,7 @@
                         </div>
                     </div>
 
-                    <!-- Accordion de Visitas -->
+                    <!-- Gaita de visita -->
                     <div class="accordion" id="accordionVisitas">
                         <div class="accordion-item">
                             <h2 class="accordion-header">
@@ -109,7 +109,7 @@
                         </div>
                     </div>
                 </div>
-
+                <!-- TCG de Evento-->
                 <aside class="col-lg-4">
                     <div class="card mb-4">
                         <div class="card-body">
