--- a/HTML/index.html
+++ b/HTML/index.html
@@ -72,7 +72,7 @@
               uvas especiais, garantindo qualidade superior em cada produto.
             </p>
           </div>
-
+          <!-- Cirilo -->
           <section class="mb-5">
             <div
               id="carouselParreiral"
@@ -135,7 +135,7 @@
             </div>
           </section>
         </article>
-
+        <!-- Sobe e Desce-->
         <aside class="col-lg-4">
           <nav class="sidebar-nav mb-4">
             <div class="card">
@@ -184,7 +184,7 @@
               </div>
             </div>
           </nav>
-
+          <!-- TCG -->
           <div class="card">
             <div class="card-header bg-wine text-white">
               <h5 class="mb-0">
