--- a/HTML/sobre.html
+++ b/HTML/sobre.html
@@ -74,7 +74,7 @@
               </p>
             </div>
 
-            <!-- Accordion -->
+            <!-- Gaita -->
             <div class="accordion mb-5" id="accordionSobre">
               <div class="accordion-item">
                 <h2 class="accordion-header">
@@ -167,7 +167,7 @@
           </aside>
         </div>
 
-        <!-- Cards de Produtos -->
+        <!-- TCG de Produtos -->
         <section class="row mt-5">
           <div class="col-md-4 mb-4">
             <div class="card h-100">
