--- a/HTML/contato.html
+++ b/HTML/contato.html
@@ -36,7 +36,7 @@
             <div class="col-lg-8">
                 <h1 class="display-4 mb-4">Entre em Contato</h1>
                 
-                <!-- Formulário -->
+                <!-- Rastreador do governo -->
                 <form class="mb-5">
                     <div class="row">
                         <div class="col-md-6 mb-3">
@@ -75,7 +75,7 @@
             </div>
 
             <div class="col-lg-4">
-                <!-- Informações de Contato -->
+                <!-- Zap -->
                 <div class="card mb-4">
                     <div class="card-body">
                         <h5 class="card-title">INFORMAÇÕES DE CONTATO</h5>
@@ -86,7 +86,7 @@
                     </div>
                 </div>
 
-                <!-- Mapa -->
+                <!-- Umapinha -->
                 <div class="card">
                     <div class="card-body">
                         <h5 class="card-title">ONDE ESTAMOS</h5>
