--- a/HTML/contato.html
+++ b/HTML/contato.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,6 +9,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link rel="stylesheet" href="../css/styles.css">
 </head>
+
 <body>
     <header>
         <nav class="navbar navbar-expand-lg navbar-dark bg-wine fixed-top">
@@ -35,7 +37,7 @@
         <div class="row">
             <div class="col-lg-8">
                 <h1 class="display-4 mb-4">Entre em Contato</h1>
-                
+
                 <!-- Rastreador do governo -->
                 <form class="mb-5">
                     <div class="row">
@@ -79,10 +81,11 @@
                 <div class="card mb-4">
                     <div class="card-body">
                         <h5 class="card-title">INFORMAÇÕES DE CONTATO</h5>
-                        <p><i class="fas fa-map-marker-alt me-2 text-wine"></i> Estrada do Vinhedo, 1234</p>
-                        <p><i class="fas fa-phone me-2 text-wine"></i> (11) 9999-9999</p>
+                        <p><i class="fas fa-map-marker-alt me-2 text-wine"></i> Rua do Alemão, 426</p>
+                        <p><i class="fas fa-phone me-2 text-wine"></i> (11) 4002-8922</p>
                         <p><i class="fas fa-envelope me-2 text-wine"></i> contato@parreiral.com</p>
                         <p><i class="fas fa-clock me-2 text-wine"></i> Seg-Sex: 8h-18h</p>
+                        <p><i class="fas fa-clock me-2 text-wine"></i> Sáb-Feriados: 8h-14h</p>
                     </div>
                 </div>
 
@@ -90,16 +93,16 @@
                 <div class="card">
                     <div class="card-body">
                         <h5 class="card-title">ONDE ESTAMOS</h5>
-                        <div id="map" style="height: 300px; background-color: #f8f9fa; display: flex; align-items: center; justify-content: center; border-radius: 5px;">
-                            <div class="text-center">
-                                <i class="fas fa-map fa-3x text-wine mb-3"></i>
-                                <p>Mapa do Vinhedo Parreiral</p>
-                                <small>OpenStreetMap</small>
-                            </div>
-                        </div>
+                        <iframe width="425" height="350"
+                            src="https://www.openstreetmap.org/export/embed.html?bbox=-38.405005856849066%2C-12.797301427819178%2C-38.39541427741181%2C-12.789642886389576&amp;layer=mapnik"
+                            style="border: 1px solid black"></iframe><br /><small><a
+                                href="https://www.openstreetmap.org/?#map=17/-12.793472/-38.400210">Ver mapa
+                                ampliado</a></small>
                     </div>
                 </div>
             </div>
+        </div>
+        </div>
         </div>
     </main>
 
@@ -121,4 +124,5 @@
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
+
 </html>
