--- a/HTML/diversos.html
+++ b/HTML/diversos.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,6 +9,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link rel="stylesheet" href="../css/styles.css">
 </head>
+
 <body>
     <header>
         <nav class="navbar navbar-expand-lg navbar-dark bg-wine fixed-top">
@@ -23,7 +25,8 @@
                     <ul class="navbar-nav ms-auto">
                         <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
                         <li class="nav-item"><a class="nav-link" href="sobre.html">Sobre Nós</a></li>
-                        <li class="nav-item"><a class="nav-link active" href="diversos.html">Eventos e Visitações</a></li>
+                        <li class="nav-item"><a class="nav-link active" href="diversos.html">Eventos e Visitações</a>
+                        </li>
                         <li class="nav-item"><a class="nav-link" href="contato.html">Contato</a></li>
                     </ul>
                 </div>
@@ -34,13 +37,15 @@
     <main class="container mt-5 pt-5">
         <article>
             <h1 class="display-4 mb-4">Eventos e Visitações</h1>
-            
+
             <div class="row">
                 <div class="col-lg-8">
                     <p class="lead">Transforme momentos especiais em experiências inesquecíveis em nosso vinhedo</p>
-                    
+
                     <div class="mb-5">
-                        <p>Oferecemos uma estrutura completa para realização de eventos corporativos, casamentos, aniversários e degustações técnicas. Nossa equipe especializada cuida de todos os detalhes para garantir uma experiência única.</p>
+                        <p>Oferecemos uma estrutura completa para realização de eventos corporativos, casamentos,
+                            aniversários e degustações técnicas. Nossa equipe especializada cuida de todos os detalhes
+                            para garantir uma experiência única.</p>
                     </div>
 
                     <!-- TCG de Evento -->
@@ -50,8 +55,10 @@
                                 <img src="../img/evento2.jpeg" class="card-img-top" alt="Evento Corporativo">
                                 <div class="card-body">
                                     <h5 class="card-title">Eventos Corporativos</h5>
-                                    <p class="card-text">Reuniões, confraternizações e treinamentos em ambiente diferenciado.</p>
-                                    <button class="btn btn-wine" data-bs-toggle="modal" data-bs-target="#modalCorporativo">Saiba Mais</button>
+                                    <p class="card-text">Reuniões, confraternizações e treinamentos em ambiente
+                                        diferenciado.</p>
+                                    <button class="btn btn-wine" data-bs-toggle="modal"
+                                        data-bs-target="#modalCorporativo">Saiba Mais</button>
                                 </div>
                             </div>
                         </div>
@@ -61,7 +68,8 @@
                                 <div class="card-body">
                                     <h5 class="card-title">Casamentos</h5>
                                     <p class="card-text">Celebre seu amor em um cenário romântico e exclusivo.</p>
-                                    <button class="btn btn-wine" data-bs-toggle="modal" data-bs-target="#modalCasamento">Saiba Mais</button>
+                                    <button class="btn btn-wine" data-bs-toggle="modal"
+                                        data-bs-target="#modalCasamento">Saiba Mais</button>
                                 </div>
                             </div>
                         </div>
@@ -71,11 +79,13 @@
                     <div class="accordion" id="accordionVisitas">
                         <div class="accordion-item">
                             <h2 class="accordion-header">
-                                <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#visitaPrivada">
+                                <button class="accordion-button" type="button" data-bs-toggle="collapse"
+                                    data-bs-target="#visitaPrivada">
                                     Visitas Privadas
                                 </button>
                             </h2>
-                            <div id="visitaPrivada" class="accordion-collapse collapse show" data-bs-parent="#accordionVisitas">
+                            <div id="visitaPrivada" class="accordion-collapse collapse show"
+                                data-bs-parent="#accordionVisitas">
                                 <div class="accordion-body">
                                     <p>Experiência exclusiva com degustação guiada por nossos enólogos. Inclui:</p>
                                     <ul>
@@ -90,11 +100,13 @@
                         </div>
                         <div class="accordion-item">
                             <h2 class="accordion-header">
-                                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#visitaPublica">
+                                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                                    data-bs-target="#visitaPublica">
                                     Visitas Públicas
                                 </button>
                             </h2>
-                            <div id="visitaPublica" class="accordion-collapse collapse" data-bs-parent="#accordionVisitas">
+                            <div id="visitaPublica" class="accordion-collapse collapse"
+                                data-bs-parent="#accordionVisitas">
                                 <div class="accordion-body">
                                     <p>Tour em grupo com datas programadas. Perfect para grupos e excursões.</p>
                                     <ul>
@@ -206,4 +218,5 @@
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
+
 </html>
