--- a/paginas/diversos.html
+++ b/paginas/diversos.html
@@ -201,19 +201,29 @@
     </div>
 
     <footer class="bg-dark text-light py-4 mt-5">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-6">
-                    <h5>TRABALHE CONOSCO</h5>
-                    <p>Envie seu Currículo para: rh@parreiral.com</p>
-                </div>
-                <div class="col-md-6">
-                    <h5>CONTATO</h5>
-                    <p><i class="fas fa-phone"></i> (71) 4002-8922</p>
-                    <p><i class="fas fa-envelope"></i> contato@parreiral.com</p>
-                </div>
-            </div>
-        </div>
+       <div class="container">
+  <div class="row">
+    <div class="col-md-4">
+      <h5>TRABALHE CONOSCO</h5>
+      <p>Envie seu Currículo para: rh@parreiral.com</p>
+    </div>
+
+    <div class="col-md-4">
+      <h5>CONTATO</h5>
+      <p><i class="fas fa-phone"></i> (71) 40028922</p>
+      <p><i class="fas fa-envelope"></i> contato@parreiral.com</p>
+    </div>
+
+    <div class="col-md-4">
+      <h5>SIGA-NOS</h5>
+      <nav>
+        <a href="#"><i class="fab fa-facebook"></i> ParreiralBrasil</a><br>
+        <a href="#"><i class="fab fa-instagram"></i> parreiraloficial</a><br>
+        <!--<a href="#"><i class="fab fa-twitter"></i> Twitter</a>-->
+      </nav>
+    </div>
+  </div>
+</div>
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
