--- a/paginas/diversos.html
+++ b/paginas/diversos.html
@@ -200,7 +200,7 @@
         </div>
     </div>
 
-    <footer class="bg-dark text-light py-4 mt-5">
+  <footer class="bg-dark text-light py-4 mt-5">
        <div class="container">
   <div class="row">
     <div class="col-md-4">
@@ -217,9 +217,9 @@
     <div class="col-md-4">
       <h5>SIGA-NOS</h5>
       <nav>
-        <a href="#"><i class="fab fa-facebook"></i> ParreiralBrasil</a><br>
-        <a href="#"><i class="fab fa-instagram"></i> parreiraloficial</a><br>
-        <!--<a href="#"><i class="fab fa-twitter"></i> Twitter</a>-->
+        <a href="#"><i class="fab fa-facebook"></i> Facebook</a><br>
+        <a href="#"><i class="fab fa-instagram"></i> Instagram</a><br>
+        <a href="#"><i class="fab fa-twitter"></i> Twitter</a>
       </nav>
     </div>
   </div>
