--- a/paginas/index.html
+++ b/paginas/index.html
@@ -205,4 +205,57 @@
           <div class="card">
             <div class="card-header bg-wine text-white">
               <h5 class="mb-0">
-                <i class="fas fa-tv me-2"></i
+                <i class="fas fa-tv me-2"></i>NOSSA EMPRESA NA MÍDIA
+              </h5>
+            </div>
+            <div class="card-body">
+              <div class="media-item mb-3">
+                <i class="fas fa-newspaper me-2 text-wine"></i>
+                <span>Revista Vinho Brasil - Mar/2024</span>
+              </div>
+              <div class="media-item mb-3">
+                <i class="fas fa-tv me-2 text-wine"></i>
+                <span>Globo Rural - Especial Vinhedos</span>
+              </div>
+              <div class="media-item mb-3">
+                <i class="fas fa-podcast me-2 text-wine"></i>
+                <span>Podcast "Vinhos & Histórias"</span>
+              </div>
+              <div class="media-item">
+                <i class="fas fa-trophy me-2 text-wine"></i>
+                <span>Prêmio Melhor Vinho 2023</span>
+              </div>
+            </div>
+          </div>
+        </aside>
+      </div>
+    </main>
+
+    <!-- FOOTER -->
+    <footer class="bg-dark text-light py-4 mt-5">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-4">
+            <h5>TRABALHE CONOSCO</h5>
+            <p>Envie seu Currículo para: rh@parreiral.com</p>
+          </div>
+          <div class="col-md-4">
+            <h5>CONTATO</h5>
+            <p><i class="fas fa-phone"></i> (71) 40028922</p>
+            <p><i class="fas fa-envelope"></i> contato@parreiral.com</p>
+          </div>
+          <div class="col-md-4">
+            <h5>SIGA-NOS</h5>
+            <nav>
+              <a href="#"><i class="fab fa-facebook"></i> ParreiralBrasil</a><br />
+              <a href="#"><i class="fab fa-instagram"></i> parreiraloficial</a>
+            </nav>
+          </div>
+        </div>
+      </div>
+    </footer>
+
+    <!-- Bootstrap JS -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+  </body>
+</html>
