--- a/paginas/index.html
+++ b/paginas/index.html
@@ -11,18 +11,18 @@
       rel="stylesheet"
     />
 
-    <!-- Font Awesome -->
+    <!-- biblioteca da Font Awesome -->
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
     />
 
-    <!-- Seu CSS -->
+    <!-- linkar o CSS -->
     <link rel="stylesheet" href="../css/styles.css" />
   </head>
 
   <body>
-    <!-- NAVBAR -->
+    <!-- divisória NAVBAR: barra superior do site e logo -->
     <header>
       <nav class="navbar navbar-expand-lg navbar-dark bg-wine">
         <div class="container">
@@ -31,7 +31,7 @@
             <i class="fas fa-wine-bottle me-2"></i> PARREIRAL
           </a>
 
-          <!-- Botão hamburguer -->
+          <!-- Botão hamburguer pedro -->
           <button
             class="navbar-toggler"
             type="button"
