--- a/paginas/sobre.html
+++ b/paginas/sobre.html
@@ -133,7 +133,7 @@
         </aside>
       </div>
 
-      <!-- TCG de Produtos -->
+      <!-- TCG de Produtos separada -->
       <section class="row mt-5">
         <div class="col-md-4 mb-4">
           <div class="card h-100">
@@ -194,7 +194,6 @@
       <nav>
         <a href="#"><i class="fab fa-facebook"></i> ParreiralBrasil</a><br>
         <a href="#"><i class="fab fa-instagram"></i> parreiraloficial</a><br>
-        <!--<a href="#"><i class="fab fa-twitter"></i> Twitter</a>-->
       </nav>
     </div>
   </div>
