--- a/paginas/sobre.html
+++ b/paginas/sobre.html
@@ -8,6 +8,13 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" />
   <link rel="stylesheet" href="../css/styles.css" />
+  <style>
+    /* Ajusta as imagens para não invadir o aside */
+    .card-img-top {
+      object-fit: cover; /* Mantém proporção da imagem */
+      height: 250px;     /* Altura fixa para todas */
+    }
+  </style>
 </head>
 
 <body>
@@ -15,26 +22,17 @@
     <nav class="navbar navbar-expand-lg navbar-dark bg-wine fixed-top">
       <div class="container">
         <a class="navbar-brand" href="index.html">
-          <i class="fas fa-wine-bottle me-2"></i> 
-          PARREIRAL
+          <i class="fas fa-wine-bottle me-2"></i> PARREIRAL
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav ms-auto">
-            <li class="nav-item">
-              <a class="nav-link" href="index.html">Home</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link active" href="sobre.html">Sobre Nós</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="diversos.html">Eventos e Visitações</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="contato.html">Contato</a>
-            </li>
+            <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+            <li class="nav-item"><a class="nav-link active" href="sobre.html">Sobre Nós</a></li>
+            <li class="nav-item"><a class="nav-link" href="diversos.html">Eventos e Visitações</a></li>
+            <li class="nav-item"><a class="nav-link" href="contato.html">Contato</a></li>
           </ul>
         </div>
       </div>
@@ -42,30 +40,20 @@
   </header>
 
   <main class="container mt-5 pt-5">
+    <!-- Início do conteúdo principal -->
     <article>
       <div class="row">
+        <!-- Coluna principal -->
         <div class="col-lg-8">
           <h1 class="display-4 mb-4">Nossa História</h1>
-          <p class="lead">
-            Há mais de 50 anos cultivando tradição e qualidade
-          </p>
+          <p class="lead">Há mais de 50 anos cultivando tradição e qualidade</p>
 
           <div class="mb-5">
-            <p>
-              Fundada em 1970, a Parreiral nasceu do sonho de produzir vinhos
-              e derivados da uva com a mais alta qualidade, preservando as
-              tradições familiares e incorporando inovações tecnológicas.
-            </p>
-
-            <p>
-              Nosso vinhedo, localizado em uma região privilegiada, possui
-              condições climáticas ideais para o cultivo de uvas especiais
-              para produção de vinhos finos, geleias artesanais e licores
-              exclusivos.
-            </p>
+            <p>Fundada em 1970, a Parreiral nasceu do sonho de produzir vinhos e derivados da uva com a mais alta qualidade, preservando as tradições familiares e incorporando inovações tecnológicas.</p>
+            <p>Nosso vinhedo, localizado em uma região privilegiada, possui condições climáticas ideais para o cultivo de uvas especiais para produção de vinhos finos, geleias artesanais e licores exclusivos.</p>
           </div>
 
-          <!-- Gaita -->
+          <!-- Accordion Missão, Visão e Valores -->
           <div class="accordion mb-5" id="accordionSobre">
             <div class="accordion-item">
               <h2 class="accordion-header">
@@ -75,132 +63,106 @@
               </h2>
               <div id="missao" class="accordion-collapse collapse show" data-bs-parent="#accordionSobre">
                 <div class="accordion-body">
-                  Produzir derivados da uva de excelência, promover
-                  experiências enogastronômicas únicas e preservar o meio
-                  ambiente através de práticas sustentáveis.
+                  Produzir derivados da uva de excelência, promover experiências enogastronômicas únicas e preservar o meio ambiente através de práticas sustentáveis.
                 </div>
               </div>
             </div>
             <div class="accordion-item">
               <h2 class="accordion-header">
-                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                  data-bs-target="#visao">
+                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#visao">
                   Nossa Visão
                 </button>
               </h2>
               <div id="visao" class="accordion-collapse collapse" data-bs-parent="#accordionSobre">
                 <div class="accordion-body">
-                  Ser referência nacional na produção de derivados da uva e no
-                  turismo enogastronômico até 2030.
+                  Ser referência nacional na produção de derivados da uva e no turismo enogastronômico até 2030.
                 </div>
               </div>
             </div>
             <div class="accordion-item">
               <h2 class="accordion-header">
-                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                  data-bs-target="#valores">
+                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#valores">
                   Nossos Valores
                 </button>
               </h2>
               <div id="valores" class="accordion-collapse collapse" data-bs-parent="#accordionSobre">
                 <div class="accordion-body">
-                  Qualidade, tradição, sustentabilidade, inovação e paixão
-                  pelo que fazemos.
+                  Qualidade, tradição, sustentabilidade, inovação e paixão pelo que fazemos.
                 </div>
               </div>
             </div>
           </div>
         </div>
 
+        <!-- Coluna aside -->
         <aside class="col-lg-4">
           <div class="card">
             <div class="card-body">
               <h5 class="card-title">NOSSA EMPRESA NA MÍDIA</h5>
-              <div class="media-item mb-3">
-                <i class="fas fa-newspaper me-2 text-wine"></i>
-                <span>Revista Vinho - Jan/2024</span>
-              </div>
-              <div class="media-item mb-3">
-                <i class="fas fa-tv me-2 text-wine"></i>
-                <span>Globo Rural - Dez/2023</span>
-              </div>
-              <div class="media-item mb-3">
-                <i class="fas fa-podcast me-2 text-wine"></i>
-                <span>Podcast Enogourmet</span>
-              </div>
+              <div class="media-item mb-3"><i class="fas fa-newspaper me-2 text-wine"></i> Revista Vinho - Jan/2024</div>
+              <div class="media-item mb-3"><i class="fas fa-tv me-2 text-wine"></i> Globo Rural - Dez/2023</div>
+              <div class="media-item mb-3"><i class="fas fa-podcast me-2 text-wine"></i> Podcast Enogourmet</div>
             </div>
           </div>
         </aside>
-      </div>
-   </article>
+      </div> <!-- Fecha row do artigo -->
+    </article>
 
-      <!-- TCG de Produtos separada -->
-      <section class="row mt-5">
-        <div class="col-md-4 mb-4">
-          <div class="card h-100">
-            <img src="../img/vinhos.jpeg" class="card-img-top" alt="Vinhos" />
-            <div class="card-body">
-              <h5 class="card-title">Vinhos Finos</h5>
-              <p class="card-text">
-                Produzidos com uvas selecionadas e envelhecidos em barris de
-                carvalho francês.
-              </p>
-            </div>
+    <!-- Seção de Produtos: fora do article -->
+    <section class="row mt-5">
+      <div class="col-md-4 mb-4">
+        <div class="card h-100">
+          <img src="../img/vinhos.jpeg" class="card-img-top" alt="Vinhos" />
+          <div class="card-body">
+            <h5 class="card-title">Vinhos Finos</h5>
+            <p class="card-text">Produzidos com uvas selecionadas e envelhecidos em barris de carvalho francês.</p>
           </div>
         </div>
-        <div class="col-md-4 mb-4">
-          <div class="card h-100">
-            <img src="../img/geleias.jpeg" class="card-img-top" alt="Geleias" />
-            <div class="card-body">
-              <h5 class="card-title">Geleias Artesanais</h5>
-              <p class="card-text">
-                Geleias 100% naturais sem conservantes, feitas com frutas da
-                estação.
-              </p>
-            </div>
+      </div>
+      <div class="col-md-4 mb-4">
+        <div class="card h-100">
+          <img src="../img/geleias.jpeg" class="card-img-top" alt="Geleias" />
+          <div class="card-body">
+            <h5 class="card-title">Geleias Artesanais</h5>
+            <p class="card-text">Geleias 100% naturais sem conservantes, feitas com frutas da estação.</p>
           </div>
         </div>
-        <div class="col-md-4 mb-4">
-          <div class="card h-100">
-            <img src="../img/licores.jpeg" class="card-img-top" alt="Licores" />
-            <div class="card-body">
-              <h5 class="card-title">Licores Exclusivos</h5>
-              <p class="card-text">
-                Licores premium com sabores únicos desenvolvidos por nossos
-                mestres licoristas.
-              </p>
-            </div>
+      </div>
+      <div class="col-md-4 mb-4">
+        <div class="card h-100">
+          <img src="../img/licores.jpeg" class="card-img-top" alt="Licores" />
+          <div class="card-body">
+            <h5 class="card-title">Licores Exclusivos</h5>
+            <p class="card-text">Licores premium com sabores únicos desenvolvidos por nossos mestres licoristas.</p>
           </div>
         </div>
-      </section>
+      </div>
+    </section>
   </main>
 
   <footer class="bg-dark text-light py-4 mt-5">
-       <div class="container">
-  <div class="row">
-    <div class="col-md-4">
-      <h5>TRABALHE CONOSCO</h5>
-      <p>Envie seu Currículo para: rh@parreiral.com</p>
+    <div class="container">
+      <div class="row">
+        <div class="col-md-4">
+          <h5>TRABALHE CONOSCO</h5>
+          <p>Envie seu Currículo para: rh@parreiral.com</p>
+        </div>
+        <div class="col-md-4">
+          <h5>CONTATO</h5>
+          <p><i class="fas fa-phone"></i> (71) 40028922</p>
+          <p><i class="fas fa-envelope"></i> contato@parreiral.com</p>
+        </div>
+        <div class="col-md-4">
+          <h5>SIGA-NOS</h5>
+          <nav>
+            <a href="#"><i class="fab fa-facebook"></i> ParreiralBrasil</a><br>
+            <a href="#"><i class="fab fa-instagram"></i> parreiraloficial</a><br>
+          </nav>
+        </div>
+      </div>
     </div>
+  </footer>
 
-    <div class="col-md-4">
-      <h5>CONTATO</h5>
-      <p><i class="fas fa-phone"></i> (71) 40028922</p>
-      <p><i class="fas fa-envelope"></i> contato@parreiral.com</p>
-    </div>
-
-    <div class="col-md-4">
-      <h5>SIGA-NOS</h5>
-      <nav>
-        <a href="#"><i class="fab fa-facebook"></i> ParreiralBrasil</a><br>
-        <a href="#"><i class="fab fa-instagram"></i> parreiraloficial</a><br>
-      </nav>
-    </div>
-  </div>
-</div>
-    </footer>
-
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
-
 </html>
