--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     />
 
     <!-- linkar o CSS -->
-    <link rel="stylesheet" href="../css/styles.css" />
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
 
   <body>
@@ -48,9 +48,9 @@
           <div class="collapse navbar-collapse" id="navbarNav">
             <div class="navbar-nav ms-auto">
               <a class="nav-link active" href="index.html">Home</a>
-              <a class="nav-link" href="sobre.html">Sobre Nós</a>
-              <a class="nav-link" href="diversos.html">Eventos e Visitações</a>
-              <a class="nav-link" href="contato.html">Contato</a>
+              <a class="nav-link" href="./paginas/sobre.html">Sobre Nós</a>
+              <a class="nav-link" href="./paginas/diversos.html">Eventos e Visitações</a>
+              <a class="nav-link" href="./paginas/contato.html">Contato</a>
             </div>
           </div>
         </div>
@@ -102,21 +102,21 @@
               <div class="carousel-inner">
                 <div class="carousel-item active">
                   <img
-                    src="../img/vinhedo1.jpeg"
+                    src="./img/vinhedo1.jpeg"
                     class="d-block w-100 carousel-img"
                     alt="Vinhedo"
                   />
                 </div>
                 <div class="carousel-item">
                   <img
-                    src="../img/produtos1.jpeg"
+                    src="./img/produtos1.jpeg"
                     class="d-block w-100 carousel-img"
                     alt="Produtos"
                   />
                 </div>
                 <div class="carousel-item">
                   <img
-                    src="../img/evento1.jpeg"
+                    src="./img/evento1.jpeg"
                     class="d-block w-100 carousel-img"
                     alt="Eventos"
                   />
@@ -176,22 +176,22 @@
                   </button>
                 </h5>
               </div>
-              <div class="collapse" id="menuRapido">
+              <div class="collapse show" id="menuRapido">
                 <div class="list-group list-group-flush">
                   <a
-                    href="sobre.html"
+                    href="./paginas/sobre.html"
                     class="list-group-item list-group-item-action"
                   >
                     <i class="fas fa-info-circle me-2 text-wine"></i>Sobre Nós
                   </a>
                   <a
-                    href="contato.html"
+                    href="./paginas/contato.html"
                     class="list-group-item list-group-item-action"
                   >
                     <i class="fas fa-wine-bottle me-2 text-wine"></i>Contato
                   </a>
                   <a
-                    href="diversos.html"
+                    href="./paginas/diversos.html"
                     class="list-group-item list-group-item-action"
                   >
                     <i class="fas fa-calendar me-2 text-wine"></i>Eventos
