--- a/paginas/contato.html
+++ b/paginas/contato.html
@@ -14,7 +14,7 @@
     <header>
         <nav class="navbar navbar-expand-lg navbar-dark bg-wine fixed-top">
             <div class="container">
-                <a class="navbar-brand" href="index.html">
+                <a class="navbar-brand" href="../index.html">
                     <i class="fas fa-wine-bottle me-2"></i>
                     PARREIRAL
                 </a>
@@ -23,7 +23,7 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav ms-auto">
-                        <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+                        <li class="nav-item"><a class="nav-link" href="../index.html">Home</a></li>
                         <li class="nav-item"><a class="nav-link" href="sobre.html">Sobre Nós</a></li>
                         <li class="nav-item"><a class="nav-link" href="diversos.html">Eventos e Visitações</a></li>
                         <li class="nav-item"><a class="nav-link active" href="contato.html">Contato</a></li>
@@ -81,7 +81,7 @@
                 <div class="card mb-4">
                     <div class="card-body">
                         <h5 class="card-title">INFORMAÇÕES DE CONTATO</h5>
-                        <p><i class="fas fa-map-marker-alt me-2 text-wine"></i> Rua do Alemão, 426</p>
+                        <p><i class="fas fa-map-marker-alt me-2 text-wine"></i> Rua Floriano Peixoto, 426</p>
                         <p><i class="fas fa-phone me-2 text-wine"></i> (71) 4002-8922</p>
                         <p><i class="fas fa-envelope me-2 text-wine"></i> contato@parreiral.com</p>
                         <p><i class="fas fa-clock me-2 text-wine"></i> Seg-Sex: 8h-18h</p>
@@ -93,7 +93,7 @@
                 <div class="card">
                     <div class="card-body">
                         <h5 class="card-title">ONDE ESTAMOS</h5>
-                        <iframe width="425" height="350"
+                        <iframe width="300" height="350"
                             src="https://www.openstreetmap.org/export/embed.html?bbox=-38.405005856849066%2C-12.797301427819178%2C-38.39541427741181%2C-12.789642886389576&amp;layer=mapnik"
                             style="border: 1px solid black"></iframe><br /><small><a
                                 href="https://www.openstreetmap.org/?#map=17/-12.793472/-38.400210">Ver mapa
