--- a/paginas/sobre.html
+++ b/paginas/sobre.html
@@ -21,7 +21,7 @@
   <header>
     <nav class="navbar navbar-expand-lg navbar-dark bg-wine fixed-top">
       <div class="container">
-        <a class="navbar-brand" href="index.html">
+        <a class="navbar-brand" href="../index.html">
           <i class="fas fa-wine-bottle me-2"></i> PARREIRAL
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
@@ -29,7 +29,7 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav ms-auto">
-            <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+            <li class="nav-item"><a class="nav-link" href="../index.html">Home</a></li>
             <li class="nav-item"><a class="nav-link active" href="sobre.html">Sobre Nós</a></li>
             <li class="nav-item"><a class="nav-link" href="diversos.html">Eventos e Visitações</a></li>
             <li class="nav-item"><a class="nav-link" href="contato.html">Contato</a></li>
@@ -92,6 +92,35 @@
               </div>
             </div>
           </div>
+          <section class="row mt-5">
+      <div class="col mb-4">
+        <div class="card h-100">
+          <img src="../img/vinhos.jpeg" class="card-img-top" alt="Vinhos" />
+          <div class="card-body">
+            <h5 class="card-title">Vinhos Finos</h5>
+            <p class="card-text">Produzidos com uvas selecionadas e envelhecidos em barris de carvalho francês.</p>
+          </div>
+        </div>
+      </div>
+      <div class="col mb-4">
+        <div class="card h-100">
+          <img src="../img/geleias.jpeg" class="card-img-top" alt="Geleias" />
+          <div class="card-body">
+            <h5 class="card-title">Geleias Artesanais</h5>
+            <p class="card-text">Geleias 100% naturais sem conservantes, feitas com frutas da estação.</p>
+          </div>
+        </div>
+      </div>
+      <div class="col mb-4">
+        <div class="card h-100">
+          <img src="../img/licores.jpeg" class="card-img-top" alt="Licores" />
+          <div class="card-body">
+            <h5 class="card-title">Licores Exclusivos</h5>
+            <p class="card-text">Licores premium com sabores únicos desenvolvidos por nossos mestres licoristas.</p>
+          </div>
+        </div>
+      </div>
+    </section>
         </div>
 
         <!-- Coluna aside -->
@@ -108,36 +137,7 @@
       </div> <!-- Fecha row do artigo -->
     </article>
 
-    <!-- Seção de Produtos: fora do article -->
-    <section class="row mt-5">
-      <div class="col-md-3 mb-4">
-        <div class="card h-100">
-          <img src="../img/vinhos.jpeg" class="card-img-top" alt="Vinhos" />
-          <div class="card-body">
-            <h5 class="card-title">Vinhos Finos</h5>
-            <p class="card-text">Produzidos com uvas selecionadas e envelhecidos em barris de carvalho francês.</p>
-          </div>
-        </div>
-      </div>
-      <div class="col-md-3 mb-4">
-        <div class="card h-100">
-          <img src="../img/geleias.jpeg" class="card-img-top" alt="Geleias" />
-          <div class="card-body">
-            <h5 class="card-title">Geleias Artesanais</h5>
-            <p class="card-text">Geleias 100% naturais sem conservantes, feitas com frutas da estação.</p>
-          </div>
-        </div>
-      </div>
-      <div class="col-md-2 mb-4">
-        <div class="card h-100">
-          <img src="../img/licores.jpeg" class="card-img-top" alt="Licores" />
-          <div class="card-body">
-            <h5 class="card-title">Licores Exclusivos</h5>
-            <p class="card-text">Licores premium com sabores únicos desenvolvidos por nossos mestres licoristas.</p>
-          </div>
-        </div>
-      </div>
-    </section>
+    
   </main>
 
   <footer class="bg-dark text-light py-4 mt-5">
