--- a/paginas/diversos.html
+++ b/paginas/diversos.html
@@ -14,7 +14,7 @@
     <header>
         <nav class="navbar navbar-expand-lg navbar-dark bg-wine fixed-top">
             <div class="container">
-                <a class="navbar-brand" href="index.html">
+                <a class="navbar-brand" href="../index.html">
                     <i class="fas fa-wine-bottle me-2"></i>
                     PARREIRAL
                 </a>
@@ -23,7 +23,7 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav ms-auto">
-                        <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+                        <li class="nav-item"><a class="nav-link" href="../index.html">Home</a></li>
                         <li class="nav-item"><a class="nav-link" href="sobre.html">Sobre Nós</a></li>
                         <li class="nav-item"><a class="nav-link active" href="diversos.html">Eventos e Visitações</a>
                         </li>
